# sc-open-data-project

./: .gitignore  main.py  pyproject.toml
dataloader/: armor_loader.py  cap_assignment_loader.py  cargo_grid_loader.py  clothing_loader.py  controller_loader.py  cooler_loader.py  fps_ammo_loader.py  fps_magazine_loader.py  fps_weapon_loader.py  fuel_intake_loader.py  fuel_tank_loader.py  manufacturer_loader.py  missile_loader.py  missile_rack_loader.py  personal_storage_loader.py  power_plant_loader.py  qd_loader.py  scdatatool_loader.py  self_destruct_loader.py  shield_loader.py  ship_item_loader.py  ship_loader.py  skin_loader.py  sub_cargo_grid_loader.py  thruster_loader.py  turret_loader.py  vehicle_ammo_loader.py  vehicle_weapon_loader.py  weapon_loader.py  weapon_regen_pool_loader.py
models/: armor.py  base_model.py  cap_assignment.py  cargo_grid.py  clothing.py  controller.py  cooler.py  fake_ship.py  flare.py  fps_ammo.py  fps_magazine.py  fps_weapon.py  fuel_intake.py  fuel_tank.py  item_data.py  manufacture.py  missile.py  missile_rack.py  personal_storage.py  power_plant.py  qd.py  self_destruct.py  shield.py  ship.py  skin.py  sub_cargo_grid.py  thruster.py  turret.py  utils.py  vehicle_ammo.py  weapon_model.py  weapon_regen_pool.py
utils/: __init__.py  converter.py  extract_ship_thumbnail.py  file_manager.py  load_fake_ship.py  localizer.py  ship_alias.py  ship_manager.py  shop_info.py  vehicle.py
